Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/SAP_Order_Summary__c.object-meta.xml
<CustomObject>
    <description>This will store read only Order Details form SAP (pushed using Boomi)
There data will upsert. API names should not change or integration with Boomi will fail</description>
    <label>PKI Order Summary</label>
    <nameField>
        <label>SAP Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Order Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>