Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SAP_Order_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>