Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Account_Replace_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Replace_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ReplacementId</description>
    <label>Account Replace To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Account Replace To)</relationshipLabel>
    <relationshipName>PKI_Order_Summary_RepalceTo</relationshipName>
    <type>Lookup</type>
</CustomField>