Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Account_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship To Customer Id</description>
    <label>Account Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Account Ship To)</relationshipLabel>
    <relationshipName>PKI_Order_Summary_ShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>