Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Account_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sold To Customer Id</description>
    <label>Account Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Account Sold To)</relationshipLabel>
    <relationshipName>PKI_Order_Summary_SoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>