Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Actual_CER_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_CER_date__c</fullName>
    <inlineHelpText>Based on delivery information an actual CER date when PKI order was shipped from PKI facility for single site order or from crossdoc or DC for multisite order</inlineHelpText>
    <label>Actual Consolidation</label>
    <type>Date</type>
</CustomField>