Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Actual_Global_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Global_Delivery_Date__c</fullName>
    <inlineHelpText>Based on delivery information an actual date when PKI order was ready at manufacturing site or at crossdoc DC for multi site order</inlineHelpText>
    <label>Actual Mfg. Commit Date(GD)</label>
    <type>Date</type>
</CustomField>