Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Add_RR__c.field-meta.xml
<CustomField>
    <fullName>Add_RR__c</fullName>
    <label>Add RR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>