Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Add_RR_Description__c.field-meta.xml
<CustomField>
    <fullName>Add_RR_Description__c</fullName>
    <label>Add RR Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>