Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Additional_Order_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Order_Info__c</fullName>
    <description>mapped from: orderAdditionalInfo</description>
    <label>Additional Order Info</label>
    <type>TextArea</type>
</CustomField>