Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Bill_To_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Country__c</fullName>
    <label>Bill To Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>