Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Bill_To_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Region__c</fullName>
    <label>Bill To Address Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>