Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped using the Bill to Customer Id and an L.FLOW</description>
    <label>Bill to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PKI Order Summary (Bill to Customer)</relationshipLabel>
    <relationshipName>PKI_Order_Summary2</relationshipName>
    <type>Lookup</type>
</CustomField>