Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Bill_To_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Customer_Name__c</fullName>
    <label>Bill To Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>