Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Contact_Name1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name1__c</fullName>
    <label>Contact Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>