Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Count_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Items__c</fullName>
    <description>The total count of items relatedto this order</description>
    <label>Count of Items</label>
    <summaryFilterItems>
        <field>SAP_Order_Items__c.isRemoved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SAP_Order_Items__c.PKI_Order_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>