Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Count_of_rejected_items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_rejected_items__c</fullName>
    <label>Count of rejected items</label>
    <summaryFilterItems>
        <field>SAP_Order_Items__c.Line_Is_Rejected__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SAP_Order_Items__c.isRemoved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SAP_Order_Items__c.PKI_Order_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>