Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/CountofSites__c.field-meta.xml
<CustomField>
    <fullName>CountofSites__c</fullName>
    <description>This will count the number of Sites related to this order</description>
    <label>Count of Sites</label>
    <summaryForeignKey>SAP_Order_Sites__c.PKI_Order_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>