Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Credit_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_Name__c</fullName>
    <label>Credit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>