Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Current_Global_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Global_Delivery_Date__c</fullName>
    <description>The Global Delivery Date</description>
    <inlineHelpText>Estimated date when manufacturing will be ready with Customer order. In case of multi manufacturing site order the date is when customer order will be at the DC or crossdoc.</inlineHelpText>
    <label>Mfg. Commit Date(GD)</label>
    <type>Date</type>
</CustomField>