Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>