Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Days_Global_Delivery_to_Read_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Days_Global_Delivery_to_Read_to_Ship__c</fullName>
    <description>The days between these to stages</description>
    <inlineHelpText>The days between these to stages</inlineHelpText>
    <label>Days Global Delivery to Read to Ship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>