Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Days_Hold_to_Clear__c.field-meta.xml
<CustomField>
    <fullName>Days_Hold_to_Clear__c</fullName>
    <description>The days between these to stages</description>
    <inlineHelpText>The days between these to stages</inlineHelpText>
    <label>Days Hold to Clear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>