Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Days_Order_to_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_Order_to_Hold__c</fullName>
    <description>The days between these to stages</description>
    <inlineHelpText>The days between these to stages</inlineHelpText>
    <label>Days Order to Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>