Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Days_Ready_to_Ship_to_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_Ready_to_Ship_to_Shipped__c</fullName>
    <description>The days between these to stages</description>
    <inlineHelpText>The days between these to stages</inlineHelpText>
    <label>Days Ready to Ship to Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>