Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Delivery_Block_Description__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block_Description__c</fullName>
    <description>mapped from: orderDeliverBlockDescription</description>
    <label>Delivery Block Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>