Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Delivery_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Code__c</fullName>
    <label>Delivery Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>