Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Delivery_Status_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Code_Description__c</fullName>
    <description>mapped from: deliveryStatusCodeDescription</description>
    <label>Delivery Status Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>