Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/ext_order_id__c.field-meta.xml
<CustomField>
    <fullName>ext_order_id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Order Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>