Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/First_Time_Clear_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Clear_Date__c</fullName>
    <label>First Time Clear Date</label>
    <type>Date</type>
</CustomField>