Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/FlagForFlow__c.field-meta.xml
<CustomField>
    <fullName>FlagForFlow__c</fullName>
    <description>Set in a flow to update a record</description>
    <label>FlagForFlow</label>
    <type>DateTime</type>
</CustomField>