Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/FlagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>FlagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>just a dummy checkbox to use for API bulk loads to trigger the record to be updated</description>
    <inlineHelpText>just a dummy checkbox to use for API bulk loads to trigger the record to be updated</inlineHelpText>
    <label>FlagForUpdate</label>
    <type>Checkbox</type>
</CustomField>