Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxBlockedItems__c.field-meta.xml
<CustomField>
    <fullName>fxBlockedItems__c</fullName>
    <description>This calculates how many line items are blocked</description>
    <formula>Count_of_Items__c - Count_of_unblocked_items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxBlockedItems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>