Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxBlockedType__c.field-meta.xml
<CustomField>
    <fullName>fxBlockedType__c</fullName>
    <description>/*Returns yy,yn,ny,nn
yy: Credit Block and Delivery Block
yn: Credit Block only
ny: Delivery Block Only
nn: No Blocks
*/</description>
    <formula>/*Returns yy,yn,ny,nn
yy: Credit Block and Delivery Block
yn: Credit Block only
ny: Delivery Block Only
nn: No Blocks
*/

/*If Credit status is Approved or blank, then it is Not Blocked by credit*/
IF(Credit_Status_Name__c =&quot;Approved&quot; || ISBLANK(Credit_Status_Name__c),&quot;n&quot;,&quot;y&quot;)

&amp; 
/*If delivery block on Summary is blank AND total blocked items is zero, then Not blocked by Delivery */
IF(ISBLANK(Delivery_Block__c) &amp;&amp; fxBlockedItems__c =0 ,&quot;n&quot;,&quot;y&quot;)</formula>
    <inlineHelpText>yy: Credit Block and Delivery Block
yn: Credit Block only
ny: Delivery Block Only
nn: No Blocks</inlineHelpText>
    <label>fxBlockedType</label>
    <type>Text</type>
</CustomField>