Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxHourCreated__c.field-meta.xml
<CustomField>
    <fullName>fxHourCreated__c</fullName>
    <description>This is the Hour that the record was created (for metrics)</description>
    <formula>/*RIGHT(&quot;0&quot; &amp; TEXT(HOUR(TIMEVALUE(CreatedDate))-5),2)*/

RIGHT(&quot;0&quot; &amp; MID( TEXT(CreatedDate + ($User.UserTimezoneOffset__c/24)), 12, 2 ),2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxHourCreated</label>
    <type>Text</type>
</CustomField>