Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxIsMyOpp__c.field-meta.xml
<CustomField>
    <fullName>fxIsMyOpp__c</fullName>
    <description>formula to determine if the Opportunity owner is the same as the running user</description>
    <formula>Opportunity__r.Owner.Id = $User.Id</formula>
    <label>fxIsMyOpp</label>
    <type>Checkbox</type>
</CustomField>