Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxOppStatusMatch__c.field-meta.xml
<CustomField>
    <fullName>fxOppStatusMatch__c</fullName>
    <description>This will check to see if the Order Path is the same on Opportunity as in PKI Order Summary</description>
    <formula>Text(Order_Path__c)  =  Opportunity__r.SAP_Order_Status__c</formula>
    <inlineHelpText>Does the Opp SAP Order status match the PKi Order Path</inlineHelpText>
    <label>fxOppStatusMatch</label>
    <type>Checkbox</type>
</CustomField>