Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxPathDays__c.field-meta.xml
<CustomField>
    <fullName>fxPathDays__c</fullName>
    <description>This will display a string of text with dates and days of the path</description>
    <formula>/*
 Path_Date_All_Block__c 
 Path_Date_Order_Started__c        Days_Order_to_Hold__c 
 Path_Date_Order_Hold__c           Days_Hold_to_Clear__c 
 Path_Date_Order_Clear__c          Days_Clear_to_Global_Delivery__c 
 Path_Date_Global_Delivery__c      Days_Global_Delivery_to_Read_to_Ship__c 
 Path_Date_Ready_for_Shipping__c   Days_Ready_to_Ship_to_Shipped__c 
 Path_Date_Order_Shipped__c        Days_Open_to_Ship__c 

&quot;Path Name: &quot; &amp; 
LPAD(TEXT(DAY(Field_name__c)),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Field_name__c), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Field_name__c)) &amp; &quot; (&quot; &amp; TEXT(field2_name__c) &amp; &quot;d) &gt; &quot; &amp; 
*/


LPAD(TEXT(DAY(Path_Date_Order_Started__c)),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Order_Started__c), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Order_Started__c))  &amp; &quot; Order Started (&quot; &amp; TEXT(Days_Order_to_Hold__c ) &amp; &quot; days) &gt; &quot; &amp; BR() &amp;


LPAD(TEXT(DAY(Path_Date_Order_Hold__c )),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Order_Hold__c ), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Order_Hold__c ))  &amp; &quot; Processing Hold (&quot; &amp; TEXT(Days_Hold_to_Clear__c ) &amp; &quot; days) &gt; &quot; &amp;  BR() &amp;


LPAD(TEXT(DAY(Path_Date_Order_Clear__c )),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Order_Clear__c ), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Order_Clear__c )) &amp; &quot; Order Clear (&quot; &amp; TEXT(Days_Clear_to_Global_Delivery__c ) &amp; &quot; days) &gt; &quot; &amp; BR() &amp;


LPAD(TEXT(DAY(Path_Date_Global_Delivery__c )),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Global_Delivery__c ), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Global_Delivery__c ))  &amp; &quot; Mfg Date Committed (&quot; &amp; TEXT(Days_Global_Delivery_to_Read_to_Ship__c ) &amp; &quot; days) &gt; &quot; &amp;  BR() &amp;


LPAD(TEXT(DAY(Path_Date_Ready_for_Shipping__c   )),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Ready_for_Shipping__c   ), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Ready_for_Shipping__c   )) &amp; &quot; Ready for Shipping (&quot; &amp; TEXT(Days_Ready_to_Ship_to_Shipped__c ) &amp; &quot; days) &gt; &quot; &amp; BR() &amp;


LPAD(TEXT(DAY(Path_Date_Order_Shipped__c)),2,&quot;0&quot;) &amp; &quot;-&quot; &amp; 
CASE(MONTH(Path_Date_Order_Shipped__c), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Path_Date_Order_Shipped__c))  &amp; &quot; Order Shipped (&quot; &amp; TEXT(Days_Open_to_Ship__c ) &amp; &quot; overall days)&quot;</formula>
    <inlineHelpText>A snapshot of when the dates where received and how long until we received each date. (this is not using the actual value of the date)</inlineHelpText>
    <label>fxPathDays</label>
    <type>Text</type>
</CustomField>