Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxReplacementToAddress__c.field-meta.xml
<CustomField>
    <fullName>fxReplacementToAddress__c</fullName>
    <description>This is the concated address for replacement address</description>
    <formula>Replacement_Address_Street__c &amp; &quot;, &quot; &amp; Replacement_Address_City__c &amp; &quot;, &quot; &amp; Replacement_Address_Region__c &amp; &quot; &quot; &amp; Replacement_Address_Postal_Code__c &amp; &quot; &quot; &amp; Replacement_Address_Country__c</formula>
    <label>Replacement Address</label>
    <type>Text</type>
</CustomField>