Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxRevRecDate__c.field-meta.xml
<CustomField>
    <fullName>fxRevRecDate__c</fullName>
    <description>This is to pull the Revenue Recognized Date from the Opp</description>
    <formula>Opportunity__r.Revenue_Rec_Date__c</formula>
    <label>Revenue Rec Date</label>
    <type>Date</type>
</CustomField>