Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/fxShipToOrderAddress__c.field-meta.xml
<CustomField>
    <fullName>fxShipToOrderAddress__c</fullName>
    <formula>Ship_To_Address_Street__c &amp; &quot;, &quot; &amp; Ship_To_Address_City__c &amp; &quot;, &quot; &amp; Ship_To_Address_Region__c &amp; &quot; &quot; &amp; Ship_To_Address_Postal_Code__c &amp; &quot; &quot; &amp; Ship_To_Address_Country__c</formula>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>