Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Handling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charges__c</fullName>
    <description>mapped from: orderHandlingCharges</description>
    <label>Handling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>