Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/idocId__c.field-meta.xml
<CustomField>
    <fullName>idocId__c</fullName>
    <label>idocId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>