Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Inco_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms_Code__c</fullName>
    <label>Inco Terms Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>