Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/iRep__c.field-meta.xml
<CustomField>
    <fullName>iRep__c</fullName>
    <description>This fields is a Boolean that will look at the current user&#39;s email address and the sales rep email and evaluate if it is the same.</description>
    <formula>sales_Rep_Email__c =  $User.Email ||  Opportunity__r.OwnerId = $User.Id</formula>
    <label>iRep</label>
    <type>Checkbox</type>
</CustomField>