Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/isCOVID__c.field-meta.xml
<CustomField>
    <fullName>isCOVID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true, this is a COVID item</description>
    <label>isCOVID</label>
    <type>Checkbox</type>
</CustomField>