Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/isNew__c.field-meta.xml
<CustomField>
    <fullName>isNew__c</fullName>
    <description>This is to help for a report that shows how many orders were updated by day. If it&#39;s new, then the number is more accurate</description>
    <formula>DATEVALUE(CreatedDate) =  DATEVALUE(LastModifiedDate)
&amp;&amp;

/*We are new if the date is the same and the hours are roughly 4 hours apart*/
 value(fxHourUpdated__c) -value(fxHourCreated__c) &lt;=4</formula>
    <label>isNew</label>
    <type>Checkbox</type>
</CustomField>