Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/isSame1down__c.field-meta.xml
<CustomField>
    <fullName>isSame1down__c</fullName>
    <description>Look at the Direct manager of the Opportunity owner and see if it&#39;s the same as the current user</description>
    <formula>BLANKVALUE(Opportunity__r.Owner.Direct_Manager__c,&quot;NO MANAGER&quot;) =  $User.Id</formula>
    <label>isSame1down</label>
    <type>Checkbox</type>
</CustomField>