Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/isSame1up__c.field-meta.xml
<CustomField>
    <fullName>isSame1up__c</fullName>
    <description>Looks at the Linked Opportunity owner&#39;s Direct manager and the current user</description>
    <formula>BLANKVALUE(Opportunity__r.Owner.Direct_Manager__c,&quot;NO MANAGER&quot;)  = $User.Direct_Manager__c</formula>
    <label>isSame1up</label>
    <type>Checkbox</type>
</CustomField>