Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <description>This pulls the current Opportunity Owner (or the order sales rep email if not linked to an opp)</description>
    <formula>SUBSTITUTE(SUBSTITUTE(BLANKVALUE(Opportunity__r.Owner.Username,  sales_Rep_Email__c ),&quot;@perkinelmer.com&quot;,&quot;&quot;),&quot;.&quot;,&quot; &quot;)</formula>
    <label>Opp Owner</label>
    <type>Text</type>
</CustomField>