Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Order_Currency__c.field-meta.xml
<CustomField>
    <fullName>Order_Currency__c</fullName>
    <label>Order Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>