Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Order_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Net_Value__c</fullName>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>