Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Order_Path__c.field-meta.xml
<CustomField>
    <fullName>Order_Path__c</fullName>
    <label>Order Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_000_order_path</valueSetName>
    </valueSet>
</CustomField>