Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Order_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Name__c</fullName>
    <label>Order Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>