Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Order_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Price__c</fullName>
    <label>Order Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>