Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Original_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Customer_Date__c</fullName>
    <label>Original Customer Date</label>
    <type>Date</type>
</CustomField>