Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Original_Global_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Global_Delivery_Date__c</fullName>
    <label>Original Global Delivery Date</label>
    <type>Date</type>
</CustomField>