Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Owned_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Company__c</fullName>
    <description>Used to indicate LSDX, AES or TBD</description>
    <inlineHelpText>Used to indicate LSDX, AES or TBD</inlineHelpText>
    <label>Owned by Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_050_Owned_by_Company</valueSetName>
    </valueSet>
</CustomField>