Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Path_Date_All_Block__c.field-meta.xml
<CustomField>
    <fullName>Path_Date_All_Block__c</fullName>
    <description>The date we received a block on either the order or an item</description>
    <inlineHelpText>The date we received a block on either the order or an item</inlineHelpText>
    <label>Path Date All Block</label>
    <type>Date</type>
</CustomField>