Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Path_Date_Item_Block__c.field-meta.xml
<CustomField>
    <fullName>Path_Date_Item_Block__c</fullName>
    <description>The date when the first item was blocked</description>
    <inlineHelpText>The date when the first item was blocked</inlineHelpText>
    <label>Path Date Item Block</label>
    <type>Date</type>
</CustomField>