Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Path_Date_Ready_for_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Path_Date_Ready_for_Shipping__c</fullName>
    <description>Calculated in SQL, as the 1st date at which this value appeared.</description>
    <inlineHelpText>Calculated in SQL, as the 1st date at which this value appeared.</inlineHelpText>
    <label>Path Date Ready for Shipping</label>
    <type>Date</type>
</CustomField>