Perkin-UAT/force-app/main/default/objects/SAP_Order_Summary__c/fields/Payment_Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Description__c</fullName>
    <label>Payment Term Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>